prd_package/objects/Crew__c.object
<CustomObject>
    <fields>
        <fullName>Crew_First_Name__c</fullName>
        <description>First name of the crew.</description>
        <label>Crew First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_Last_Name__c</fullName>
        <description>Last name of the crew.</description>
        <label>Crew Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_Title__c</fullName>
        <description>Title of the crew such as FC or AP.</description>
        <label>Crew Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew_Type__c</fullName>
        <description>The type of crew.</description>
        <label>Crew Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The crew’s language, such as “French” or “Chinese (Traditional).”</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personel_Id__c</fullName>
        <description>The crew’s employee number.</description>
        <externalId>true</externalId>
        <label>Personel Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>Rank of the crew such as FC or AP.</description>
        <label>Rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Crew</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Crew_Title__c</columns>
        <columns>Crew_Type__c</columns>
        <columns>Language__c</columns>
        <columns>Personel_Id__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>